--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongodb": "^2.2.35",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "nodemon": "^1.18.9"
   },
   "devDependencies": {},
   "scripts": {
