--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/forms": "^7.1.4",
+    "@angular/animations": "^12.0.0-next.2",
+    "@angular/cdk": "^11.2.1",
+    "@angular/common": "^12.0.0-next.2",
+    "@angular/compiler": "^12.0.0-next.2",
+    "@angular/core": "^12.0.0-next.2",
+    "@angular/forms": "^12.0.0-next.2",
     "@angular/http": "^7.1.4",
     "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "^7.1.4",
+    "@angular/platform-browser": "^12.0.0-next.2",
+    "@angular/platform-browser-dynamic": "^12.0.0-next.2",
+    "@angular/router": "^12.0.0-next.2",
     "angular5-csv": "^0.2.10",
     "core-js": "^2.5.4",
     "git": "^0.1.5",
@@ -32,13 +32,13 @@
     "npm": "^6.5.0",
     "rxjs": "^6.0.0",
     "tslib": "^1.14.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/language-service": "^7.1.4",
+    "@angular/compiler-cli": "^12.0.0-next.2",
+    "@angular/language-service": "^12.0.0-next.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -53,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.1.6"
+    "typescript": "~4.1.5"
   }
 }
